--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main id="main"></main>
 
     <footer>
-        <small>Made with love by the team of <a href="https://learncomputer.in/" target="_blank">Learn Computer Academy</a> &copy; 2021</small>
+        <small>Made with <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" style="fill:rgba(253, 38, 38, 1);transform:;-ms-filter:"><path d="M20.205,4.791c-1.137-1.131-2.631-1.754-4.209-1.754c-1.483,0-2.892,0.552-3.996,1.558 c-1.104-1.006-2.512-1.558-3.996-1.558c-1.578,0-3.072,0.623-4.213,1.758c-2.353,2.363-2.352,6.059,0.002,8.412L12,21.414 l8.207-8.207C22.561,10.854,22.562,7.158,20.205,4.791z"></path></svg> by the team of <a href="https://learncomputer.in/" target="_blank">Learn Computer Academy</a> &copy; 2021</small>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js" integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ==" crossorigin="anonymous"></script>
     <script src="script.js"></script>
